[metadata]
name = plumber
description = A package to perform image plane full Stokes PB correction
long_description = file: README.md
author = Srikrishna Sekhar, Preshanth Jagannathan
author_email = srikrishna@idia.ac.za, pjaganna@nrao.edu
license = MIT
github_project = ARDG-NRAO/plumber

[options]
zip_safe = False
packages = find:
install_requires =
    casatools>=6.2
    casatasks>=6.2
    casadata
    numpy>=1.8.0
    spectral_cube>=0.5
    astropy
    astroplan
    click
    matplotlib
